ags (0.7.119)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_export_window_reload_soundcard_editor()
	* refactored AgsExportWindow to allow export multiple soundcards
	* improved mutices in ags_record_midi_audio_run.c
	* improved mutices in ags_route_dssi_audio_run.c
	* improved mutices in ags_route_lv2_audio_run.c
	* fixed ags-audio.h to remove unused headers
	* fixed AgsSoundcardEditor and AgsSequencerEditor to remove JACK device

ags (0.7.118)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed API reference removed unused objects
	* added COPYING.docs

ags (0.7.117)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAudio:midi-channel
	* implemented midi channel in AgsMidiDialog
	* implemented using midi channel in ags-record-midi
	* back-ported properties of tasks of branch 1.0
	* fixed ags-record-midi recall to proper key-on and key-off

ags (0.7.116)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_midiin_alsa_poll() and ags_midiin_oss_poll()
	* fixed possible NULL pointer access in ags_midiin_list_cards()
	* fixed AgsMidiin to always set nth_buffer during record
	* fixed in ags_midiin_set_device() to duplicate string and handle OSS4

ags (0.7.115)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed copyright statements replaced deprecated
	* fixed exclude OSS in GUI if not provided

ags (0.7.114)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disabled unused buttons yet
	* improved ags-record-midi recall

ags (0.7.113)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed API docs and updated sections

gs (0.7.112)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* providing headers libags.h, libags-audio.h and libags-gui.h
	* improved API reference

ags (0.7.111)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]